habitat_debug.log
  File "C:\Users\User\Desktop\Github\chase-ai-habitat\run_ui.py", line 1252
    tool_block = f"\n{tool_context}\n" if tool_context else ""
    ^
IndentationError: expected an indented block after function definition on line 1243
Flask process crashed — check habitat_debug.log
Flask failed to start. Check habitat_debug.log.
Shutting down Nexarion Habitat...
